# truncyate

./: .gitignore  LICENSE  README.md  pyproject.toml
requirements/: dev.txt
tests/: test_truncator.py  test_utils.py
truncyate/: __init__.py  cli.py  truncator.py  utils.py
