[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truncyate"
version = "0.1.0"
description = "A smart text truncation tool for RAG systems and LLMs"
readme = "README.md"
authors = [
    {name = "Hydev-a", email = "hamidrezaywork@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["nlp", "text", "truncation", "rag", "llm"]
dependencies = [
    "regex>=2022.0.0",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/hydev-a/truncyate/tree/main"
"Bug Tracker" = "https://github.com/hydev/truncyate/issues"
"Documentation" = "https://github.com/hydev-a/truncyate/tree/main"

[project.scripts]
truncyate = "truncyate.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
    "tox>=4.0.0",
]
docs = [
    "sphinx>=6.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=2.0.0",
]
advanced = [
    "nltk>=3.8.0",
    "scikit-learn>=1.0.0",
]

[tool.setuptools]
packages = ["truncyate"]

[tool.black]
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.mypy]
python_version = "3.7"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=precision_truncator"